# kratos-client-rust

./: CHANGELOG.md  Cargo.toml  README.md
.ci/kratos/: identity.user.schema.json  kratos.yml
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  DESIGN-DOC.yml  FEATURE-REQUEST.yml  config.yml
.github/workflows/: ci.yml  upstream-sync.yml
patches/: ui-node-attributes-untagged.patch
src/: lib.rs
src/apis/: configuration.rs  courier_api.rs  frontend_api.rs  identity_api.rs  metadata_api.rs  mod.rs
src/models/: identity_credentials.rs  ui_node_attributes.rs  update_login_flow_with_oidc_method.rs  update_recovery_flow_with_link_method.rs  update_registration_flow_with_oidc_method.rs  update_settings_flow_with_oidc_method.rs
src/wasm_apis/: configuration.rs  courier_api.rs  frontend_api.rs  identity_api.rs  metadata_api.rs  mod.rs
src/worker_apis/: configuration.rs  courier_api.rs  frontend_api.rs  identity_api.rs  metadata_api.rs  mod.rs
tests/: courier_api.rs  frontend_api.rs  identity_api.rs  metadata_api.rs  wasm_smoke.rs
tests/common/: mod.rs
tests/worker_smoke/: .gitignore  Cargo.toml  README.md  wrangler.toml
tests/worker_smoke/src/: lib.rs
tools/regen-fetch-apis/: Cargo.toml
tools/regen-fetch-apis/src/: main.rs
