[package]
name = "ory-kratos-client-wasm"
version = "0.1.3"
authors = ["JES <justin@jes.contact>", "office@ory.sh"]
description = "A fork of ory-kratos-client that uses the browser's Fetch API instead of reqwest when building for wasm."
license = "Apache-2.0"
edition = "2024"
resolver = "2"
repository = "https://github.com/justins-engineering/kratos-client-rust"
keywords = ["wasm", "web-sys", "authentication", "session", "session-management"]
categories = ["wasm", "web-programming"]

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
url = "^2.5"

[target.'cfg(target_family = "wasm")'.dependencies]
gloo-utils = { version = "0.2", features = ["serde"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Window", "RequestCredentials"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
flate2 = { version = "1.0.24", features = ["zlib-ng"], default-features = false }
reqwest = { version = "^0.12", features = ["json", "multipart"] }
uuid = { version = "^1.8", features = ["serde", "v4"] }
