[package]
name = "ory-kratos-client-wasm"
version = "0.1.4"
authors = ["JES <justin@jes.contact>", "office@ory.sh"]
description = "A fork of ory-kratos-client that uses the browser's Fetch API instead of reqwest when building for wasm."
license = "Apache-2.0"
edition = "2024"
resolver = "2"
repository = "https://github.com/justins-engineering/kratos-client-rust"
keywords = ["wasm", "web-sys", "authentication", "session", "session-management"]
categories = ["wasm", "web-programming"]
documentation = "https://docs.rs/tower-sessions"
readme = "README.md"

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["std"] }
serde_json = "^1.0"
url = "^2.5"

reqwest = { version = "^0.12", features = ["json", "multipart"], optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
uuid = { version = "^1.8", features = ["serde", "v4"], optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
uuid = { version = "^1.8", features = ["js", "serde", "v4"], optional = true }
gloo-utils = { version = "0.2", features = ["serde"], optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }
wasm-bindgen-futures = { version = "0.4.50", optional = true }
web-sys = { version = "0.3.77", features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Window", "RequestCredentials"], optional = true }

[features]
default = ["wasm"]
wasm = ["dep:gloo-utils", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys"]
reqwest = ["dep:reqwest", "dep:uuid"]
