[package]
name = "ory-kratos-client-wasm"
version = "25.4.0"
authors = ["JES <justin@jes.contact>", "office@ory.sh"]
description = "A fork of ory-kratos-client that uses the browser's Fetch API instead of reqwest when building for wasm."
license = "Apache-2.0"
edition = "2024"
repository = "https://github.com/justins-engineering/kratos-client-rust"
keywords = [
  "wasm",
  "web-sys",
  "authentication",
  "session",
  "session-management",
]
categories = ["wasm", "web-programming"]
documentation = "https://docs.rs/ory-kratos-client-wasm/"
readme = "README.md"

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.16", default-features = false, features = ["std"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"

# "wasm" feature deps
gloo-utils = { version = "0.2", features = ["serde"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "RequestCredentials",
], optional = true }

# "reqwest" feature deps
reqwest = { version = "^0.13", features = [
  "json",
  "multipart",
  "query",
], optional = true }

[features]
default = ["wasm"]
wasm = [
  "dep:gloo-utils",
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-futures",
  "dep:web-sys",
]
reqwest = ["dep:reqwest"]
